# ml-serivce

./: .dockerignore  .env.example  Dockerfile  Dockerfile.migrate  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  db.py  deps.py  errors.py  main.py  models.py  schemas.py
app/adapters/: embeddings.py  llm.py
app/processing/: chunker.py  extractors.py  validation.py
app/repositories/: chunks.py  documents.py
app/routers/: ask.py  documents.py
app/services/: ask.py  upload.py
docker/: migrate.sh
tests/: conftest.py  fakes.py  test_adapters.py  test_ask_api.py  test_ask_service.py  test_chunker.py  test_documents_api.py  test_errors.py  test_extractors.py  test_health.py  test_upload_service.py  test_validation.py
tests/fixtures/: sample.docx  sample.md  sample.txt
